[project]
name = "claud-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Dharma41",email = "dharmendrareddy2000@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.44.0,<3.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[tool.poetry]
packages = [{include = "Dharmas_claude"}]

[tool.poetry.scripts]
Dharmas_claude = "Dharmas_claude.main:run"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
